# hand-tracking

./: CMakeLists.txt  LICENSE  README  README.md  capture.cpp  capture.h  cluster.cpp  cluster.h  main.cpp  skin-detector.cpp  skin-detector.h  skin-lookup-table.h  tracker.cpp  tracker.h
include/: capture.h  cluster.h  skin-detector.h  tracker.h
include/opencv/highgui/: highgui_c.h
include/opencv/imgproc/: imgproc_c.h  types_c.h
lib/: libopencv_core.2.3.1.dylib  libopencv_core.so.2.3.1  libopencv_features2d.2.3.1.dylib  libopencv_features2d.so.2.3.1  libopencv_highgui.2.3.1.dylib  libopencv_highgui.so.2.3.1  libopencv_imgproc.2.3.1.dylib  libopencv_imgproc.so.2.3.1
src/: CMakeLists.txt  capture.cpp  cluster.cpp  main.cpp  skin-detector.cpp  tracker.cpp
